# exposure-triangle

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  app.py  freeze.py  hw10_main.md  pyproject.toml  reducer.py  state_store.py
data/: lessons.json  quizzes.json  reference.json
design/: _shell.css  colors_and_type.css  components-dial.html  components-tuner.html
scripts/: capture_hw11_screens.py  render_design_panels.py  render_planned_mockups.py
static/css/: app.css
static/js/: app.js  backend.js  reducer.js
static/renders/: bokeh_f1.2.avif  bokeh_f1.8.avif  bokeh_f11.0.avif  bokeh_f2.8.avif  bokeh_f22.0.avif  bokeh_f32.0.avif  bokeh_f4.0.avif  bokeh_f5.6.avif  bokeh_f8.0.avif  cosmic-timetraveler-LhDWW8PhPoE-unsplash.avif  iso_high.avif  iso_low.avif  iso_med.avif  motion_s0.0.avif  motion_s0.25.avif  motion_s0.5.avif  motion_s0.8.avif  motion_s1.2.avif  motion_s1.8.avif  motion_s2.5.avif  motion_s3.5.avif  paul-pastourmatzis-mwWJul4WkqU-unsplash.avif  shutter_low.avif
templates/: atlas_index.html  base.html  home.html  intro.html  learn.html  quiz.html  reference.html  result.html
tests/: atlas_server.py  build_atlas_static.py  conftest.py  test_app_routes.py  test_atlas.py  test_e2e.py  test_freeze.py  test_reducer.py  test_state_store.py
writeup/: hw10_main.md
