[project]
name = "exposure-triangle-rv2459"
version = "0.1.0"
description = "HW10 main — Exposure Triangle Flask app."
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "playwright==1.47.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
